[package]
name = "img2pdf"
version = "0.1.0"
edition = "2021"
keywords = ["image", "png", "jpeg", "jpg", "pdf"]
categories = ["multimedia::images", "command-line-utilities"]

[lib]
name = "img2pdf"
path = "src/lib.rs"

[[bin]]
name = "img2pdf"
path = "src/bin/cli.rs"

[dependencies]
image = "0.24.6"
flate2 = "1.0.26"
